<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".PantallaInicio">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="69dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo2"
        app:layout_constraintEnd_toStartOf="@+id/busquedaEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/busquedaEditText"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/busqueda"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/perfilImageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8" />

    <ImageView
        android:id="@+id/perfilImageView"
        android:layout_width="69dp"
        android:layout_height="81dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/perfil"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/genero"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:text="Genero"
        app:layout_constraintBottom_toTopOf="@+id/favoritos"
        app:layout_constraintEnd_toStartOf="@+id/fecha_de_emision"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoImageView"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/favoritos"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="Favoritos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fecha_de_emision" />

    <Button
        android:id="@+id/fecha_de_emision"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:text="Fecha de Emision"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/perfilImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>