<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo5"
    tools:context=".MiPerfil">

    <ImageView
        android:id="@+id/perfilImageView"
        android:layout_width="69dp"
        android:layout_height="81dp"
        android:contentDescription="@string/perfil"
        android:src="@drawable/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="71dp" />

    <TextView
        android:id="@+id/MiPerfiltextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/MiPerfil"
        app:layout_constraintTop_toBottomOf="@+id/perfilImageView"
        tools:layout_editor_absoluteX="170dp" />

    <EditText
        android:id="@+id/busquedaEditText"
        android:layout_width="203dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:hint="@string/busqueda"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        tools:layout_editor_absoluteX="104dp" />

    <ImageView
        android:id="@+id/menuImageView"
        android:layout_width="35dp"
        android:layout_height="36dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="@string/perfil"
        android:src="@drawable/menu"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="28dp" />

    <ImageView
        android:id="@+id/homeImageView"
        android:layout_width="65dp"
        android:layout_height="72dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/perfil"
        android:src="@drawable/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="18dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="149dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="180dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="297dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="37dp"
        tools:layout_editor_absoluteY="438dp" />

</androidx.constraintlayout.widget.ConstraintLayout>